# recruit_me

./: .buildinfo  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  coverage.json  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  recruit_me.api.html  recruit_me.api.main_api.html  recruit_me.backend.dataframe_manager.html  recruit_me.backend.email_sender.html  recruit_me.backend.html  recruit_me.backend.recruit_me_core.html  recruit_me.backend.template_filler.html  recruit_me.html  recruit_me.models.data_models.html  recruit_me.models.endpoint_models.html  recruit_me.models.html  search.html  searchindex.js
.github/workflows/: generate-docs.yml
_modules/: index.html
_modules/recruit_me/api/: main_api.html
_modules/recruit_me/backend/: dataframe_manager.html  email_sender.html  recruit_me_core.html  template_filler.html
_modules/recruit_me/models/: data_models.html  endpoint_models.html
_sources/: index.rst.txt  recruit_me.backend.dataframe_manager.rst.txt  recruit_me.backend.rst.txt  recruit_me.models.endpoint_models.rst.txt  recruit_me.models.rst.txt  recruit_me.rst.txt
docs/: recruit_me.api.rst  recruit_me.backend.recruit_me_core.rst  recruit_me.models.rst  recruit_me.rst
docs/source/: conf.py  index.rst  modules.rst  recruit_me.api.main_api.rst  recruit_me.backend.email_sender.rst  recruit_me.backend.rst  recruit_me.backend.template_filler.rst  recruit_me.models.data_models.rst
src/recruit_me/: __init__.py  configuration_template.yaml
src/recruit_me/api/: __init__.py  main_api.py
src/recruit_me/backend/: __init__.py  dataframe_manager.py  email_sender.py  recruit_me_core.py  template_filler.py
src/recruit_me/models/: __init__.py  data_models.py  (+1 more)
tests/: conftest.py  docker-compose.yml
tests/test_api/: test_main_api.py
tests/test_backend/: test_dataframe_manager.py  test_email_sender.py  test_recruit_me_core.py  test_template_filler.py
(+5 files in other folders)
