[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
requires-python = ">=3.11, <3.12" 
name = 'Python_Base_Project'
description = 'Python project template'
authors = [{ name = 'Arnaud Somville', email = 'arnaud.somville@estaca.eu' }]
version = "0.1"
dependencies = [
    "confz>=2.0.1",
    "pydantic>=2.6.4",
    "fastapi>=0.110.1",
    "uvicorn>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "sqlmodel>=0.0.12",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.3",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pdm==2.12.4",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
doc = [
    "sphinx>=8.0.2",
    "sphinxcontrib-apidoc>=0.5.0",
    "sphinx-rtd-theme>=3.0.0rc1",
    "myst-parser>=4.0.0",
]