[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11" 
name = "recruit_me"
description = "Project automizing the sending of CVs."
authors = [
    {name = "Arnaud SOMVILLE", email = "arnaud.somville@estaca.eu"},
]
version = "0.0.1"
dependencies = [
    "confz>=2.0.1",
    "pydantic>=2.6.4",
    "fastapi>=0.110.1",
    "uvicorn>=0.29.0",
    "pandas>=2.2.3",
]
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff==0.3.3",
    "mypy==1.9.0",
    "pre-commit>=3.7.0",
    "pdm==2.12.4",
    "hypothesis>=6.77.0",
    "sphinx-rtd-theme>=3.0.2",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "testscenarios>=0.5.0"
]
doc = [
    "sphinx>=8.0.2",
    "sphinxcontrib-apidoc>=0.5.0",
    "sphinx-rtd-theme>=3.0.0rc1",
    "myst-parser>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]